--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Carson Nguyen</title>
+        <link href="./stylesheet.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="wrapper">
+            <h1>About Me</h1>
+            <p>
+
+            </p>
+        </div>
+
+        <div class="wrapper">
+            <h1>Education</h1>
+        </div>
+
+        <div class="wrapper">
+            <h1>Experience</h1>
+        </div>
+
+        <div class="wrapper">
+            <h1>Projects</h1>
+        </div>
+
+        <div class="wrapper">
+            <h1>Links</h1>
+            <a href="https://www.linkedin.com/in/carsonnguyen/">LinkedIn</a>
+            <!-- 
+            <p>
+                This page is pretty <span id="adjective">static</span>.
+            </p>
+            <input oninput="toggleWordColor()" type="text" id="adjective-input"></input>
+            <button onclick="changeWord()">Click</button> 
+            -->
+        </div>
+        <!--
+            This is an HTML comment.
+        -->
+        <script src="./script.js"></script>
+    </body>
+</html>
