--- a/index.html
+++ b/index.html
@@ -4,40 +4,52 @@
         <title>Carson Nguyen</title>
         <link href="./stylesheet.css" rel="stylesheet">
     </head>
-    <body>
-        <div class="wrapper">
-            <h1>About Me</h1>
-            <p>
 
-            </p>
+    <body>
+        <div class="center">
+            <h1 id="header">Carson Nguyen</h1>
+            <p><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/carsonnguyen/">carsonnguyen</a></p>
         </div>
 
         <div class="wrapper">
             <h1>Education</h1>
+            <hr class="solid">
+            <p><b>University of Texas at Austin</b> - Electrical and Computer Engineering</p>
+            <ul>
+                <li>Current GPA: 3.91 out of 4.0</li>
+                <li>Relevant Coursework: Discrete Math, Intro to Embedded Systems, Digital Logic Design, Software Design and Implementation I & II, Algorithms</li>
+            </ul>
+            <p><b>University of Texas at Arlington</b></p>
+            <ul>
+                <li>Relevant Coursework: Engineering Problem Solving, Intro to Electrical Engineering</li>
+            </ul>
+
         </div>
 
         <div class="wrapper">
             <h1>Experience</h1>
+            <hr class="solid">
+            <p><b>Software Development Engineer Intern</b> - Amazon</p>
+            <ul>
+                <li>black hot drink</li>
+                <li>Helped streamline device customer service workflow</li>
+                <li>Developed features for 1st party Amazon devices (Fire TV, Kindle Fire, Echo devices)</li>
+                <li>Implemented an API using Java and Android SDK to call the feature on Amazon devices</li>
+                <li>Created UI using React to call the API</li>
+                <li>Created design documents to map out the device feature beyond project's scope</li>
+            </ul>
+
+            <p><b>Mechanical Engineer Intern</b> - Romeo Engineering Inc.</p>
+            <ul>
+                <li>- Enabled future improvements by creating SolidWorks CAD model of a packing machine</li>
+                <li>- Recreated electrical components on SolidWorks for a proton accelerator's electrical compartment</li>
+                <li>- Learned the fundamentals of Adobe Premier and CAD animation presentation</li>
+            </ul>
+
+            <p><b>Sales Floor Member</b> - Daiso Austin</p>
         </div>
 
-        <div class="wrapper">
-            <h1>Projects</h1>
-        </div>
+        <img src='me4.jpg' onmouseover="this.src='clown.jpg';" onmouseout="this.src='me4.jpg';" />
 
-        <div class="wrapper">
-            <h1>Links</h1>
-            <a href="https://www.linkedin.com/in/carsonnguyen/">LinkedIn</a>
-            <!-- 
-            <p>
-                This page is pretty <span id="adjective">static</span>.
-            </p>
-            <input oninput="toggleWordColor()" type="text" id="adjective-input"></input>
-            <button onclick="changeWord()">Click</button> 
-            -->
-        </div>
-        <!--
-            This is an HTML comment.
-        -->
-        <script src="./script.js"></script>
     </body>
 </html>
