Fixed some errors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <div class="center">
-            <h1 id="header">Carson Nguyen</h1>
+            <span id="header">Carson Nguyen</span>
             <p><b>LinkedIn:</b> <a href="https://www.linkedin.com/in/carsonnguyen/">carsonnguyen</a></p>
         </div>
 
@@ -31,7 +31,6 @@
             <hr class="solid">
             <p><b>Software Development Engineer Intern</b> - Amazon</p>
             <ul>
-                <li>black hot drink</li>
                 <li>Helped streamline device customer service workflow</li>
                 <li>Developed features for 1st party Amazon devices (Fire TV, Kindle Fire, Echo devices)</li>
                 <li>Implemented an API using Java and Android SDK to call the feature on Amazon devices</li>
@@ -41,15 +40,17 @@
 
             <p><b>Mechanical Engineer Intern</b> - Romeo Engineering Inc.</p>
             <ul>
-                <li>- Enabled future improvements by creating SolidWorks CAD model of a packing machine</li>
-                <li>- Recreated electrical components on SolidWorks for a proton accelerator's electrical compartment</li>
-                <li>- Learned the fundamentals of Adobe Premier and CAD animation presentation</li>
+                <li>Enabled future improvements by creating SolidWorks CAD model of a packing machine</li>
+                <li>Recreated electrical components on SolidWorks for a proton accelerator's electrical compartment</li>
+                <li>Learned the fundamentals of Adobe Premier and CAD animation presentation</li>
             </ul>
 
             <p><b>Sales Floor Member</b> - Daiso Austin</p>
         </div>
 
-        <img src='me4.jpg' onmouseover="this.src='clown.jpg';" onmouseout="this.src='me4.jpg';" />
+        <div class="square">
+            <img src='me4.jpg' onmouseover="this.src='clown.jpg';" onmouseout="this.src='me4.jpg';" />
+        </div>
 
     </body>
 </html>
