--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Carson Nguyen</title>
+        <meta charset="UTF-8">
+        <meta name="Description" content="Resume of Carson Nguyen listing education and job experience">
+        <meta name="Keywords" content="HTML, CSS, JavaScript, Resume, Education, Experience">
+        <meta name="Author" content="Carson Nguyen">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="./stylesheet.css" rel="stylesheet">
     </head>
 
